fix: extended-toggle overlaps content in mds editor

--- a/Frontend/src/app/features/mds/mds-editor/mds-editor-card/mds-editor-card.component.scss
+++ b/Frontend/src/app/features/mds/mds-editor/mds-editor-card/mds-editor-card.component.scss
@@ -19,7 +19,6 @@ es-input-fill-progress {
         background-color: #f7f7f7;
         @media only screen and (min-width: $expandToggleWidthThreshold) {
             z-index: 11;
-            height: 0;
             background-color: unset;
         }
         .extended-toggle {
